# python-geonames

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml
examples/: basic_usage.py  error_handling.py  multiple_queries.py
geonames/: cli.py  config.py  data_processing.py  database.py  models.py  utils.py
tests/: conftest.py  test_cli.py  test_data_processing.py  test_database.py  test_utils.py
